bucket_list: return ids instead of full objects
