# services/bucket_list/src/model/park.rs
@@ -1,13 +1,0 @@
-use schemars::JsonSchema;
-use serde::Serialize;
-use serde_with::skip_serializing_none;
-
-use crate::model::country::Country;
-
-#[skip_serializing_none]
-#[derive(Clone, Serialize, JsonSchema)]
-pub struct Park {
-	pub id: u32,
-	pub name: String,
-	pub country: Option<Country>,
-}
